[package]
name = "libmonado-rs"
description = "Rust bindings to the libmonado library that controls Monado from other processes"
license = "MIT"
readme = "README.md"
version = "1.3.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.49"
convert_case = "0.6.0"

[dependencies]
dlopen2 = "0.7.0"
flagset = "0.4.4"
mint = "0.5.9"
semver = "1.0.18"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
xdg = "2.5.2"

[dev-dependencies]
clap = { version = "4.4.3", features = ["derive"] }
